Updated config files to reflect current configs.

--- a/Configs/Waybar/style.css
+++ b/Configs/Waybar/style.css
@@ -1,3 +1,67 @@
-window#waybar {
+* {
+    padding: 0px;
     background: transparent;
+    font-family: Monaspace Krypton;
+    font-size: 14px;
+}
+
+.modules-left, .modules-center, .modules-right {
+    border-radius: 15px;
+    background-color: #330c07;
+    border: 5px solid #3d1b1b;
+}
+
+#network,
+#workspaces,
+#pulseaudio,
+#battery,
+#custom-clock {
+    margin: 6px;
+    padding: 2px 4px;
+    border-radius: 8px;
+    color: #d8b8b8;
+}
+
+#workspaces button {
+  transition-duration: 100ms;
+  all: initial;
+  min-width: 0;
+  font-weight: bold;
+  color: #d8cab8;
+  margin-right: 0.2cm;
+  margin-left: 0.2cm;
+}
+
+/* Sets the style of the active workspace */
+#workspaces button.focused {
+  color: #eb2222;
+}
+
+#workspaces button:hover {
+  transition-duration: 120ms;
+  color: #eb2222;
+}
+
+#pulseaudio:hover, #battery:hover {
+  transition-duration: 120ms;
+  background-image: linear-gradient(to bottom, #d16f2e 100%);
+  color: #141216;
+}
+
+
+#battery.charging {
+  color: #1d2021;
+  background-color: #2f7521;
+}
+
+#battery.warning {
+  color: #1d2021;
+  background-color: #ffcd2a;
+}
+
+#battery.warning,
+#battery.critical,
+#battery.urgent {
+  color: #1d2021;
+  background-color: #fc4649;
 }
