--- a/Configs/Waybar/style.css
+++ b/Configs/Waybar/style.css
@@ -11,11 +11,15 @@
     border: 5px solid #3d1b1b;
 }
 
+.modules-right {
+  min-width: 225px;
+}
+
 #network,
 #workspaces,
 #pulseaudio,
 #battery,
-#custom-clock {
+#clock {
     margin: 6px;
     padding: 2px 4px;
     border-radius: 8px;
@@ -42,16 +46,14 @@
   color: #eb2222;
 }
 
+#pulseaudio {
+  
+}
+
 #pulseaudio:hover, #battery:hover {
   transition-duration: 120ms;
   background-image: linear-gradient(to bottom, #d16f2e 100%);
   color: #141216;
-}
-
-
-#battery.charging {
-  color: #1d2021;
-  background-color: #2f7521;
 }
 
 #battery.warning {
@@ -59,9 +61,14 @@
   background-color: #ffcd2a;
 }
 
-#battery.warning,
 #battery.critical,
 #battery.urgent {
   color: #1d2021;
   background-color: #fc4649;
 }
+
+#battery.charging, #batter.plugged {
+  color: #1d2021;
+  background-color: #2f7521;
+}
+
