Change Eww files. Consolidated eww yuck files into one file.

--- a/Configs/Eww/Styles/powerMenu.scss
+++ b/Configs/Eww/Styles/powerMenu.scss
@@ -1,11 +1,6 @@
 * {
   all: unset;
   background: transparent;
-  font-family: Maple Mono;
-}
-
-window {
-  background: transparent;
 }
 
 .container {
@@ -17,7 +12,7 @@ window {
   border-radius: 12px;
 }
 
-.userinfo-parent {
+.widget-parent {
   background-color: #141216;
   color: #d8cab8;
   border-radius: 12px;
@@ -27,9 +22,10 @@ window {
   border-color: #d8cab8;
 }
 
-.userinfo-child {
+.widget-child {
   color: #d8cab8;
 }
+
 .label {
   font-size: 24px;
   font-weight: bold;
@@ -44,48 +40,43 @@ window {
   border-radius: 6px;
   margin: 10px;
 }
+
 .button:hover {
   background-color: #ac82e9;
   color: #141216;
   transition-duration: 150ms;
 }
+
 .button:active {
   background-color: #634a88;
   color: #141216;
   transition-duration: 150ms;
 }
 
-.poweroff-button {
+.poweroff-button, .reboot-button, .suspend-button {
   border-radius: 6px;
-  margin: 10px;
+  margin: 40px; /* The higher this number, the smaller the buttons */
 }
-.poweroff-button:hover {
+
+.poweroff-button:hover, .poweroff-button:active {
   background-color: #fc4649;
   color: #141216;
   transition-duration: 150ms;
 }
-.poweroff-button:active {
-  background-color: #862526;
+
+.reboot-button:hover, .reboot-button:active {
+  background-color: #fc4649;
   color: #141216;
   transition-duration: 150ms;
 }
 
-.suspend-button {
-  border-radius: 6px;
-  margin: 10px;
-}
-.suspend-button:hover {
+.suspend-button:hover, .suspend-button:active {
   background-color: #7b91fc;
-  color: #141216;
-  transition-duration: 150ms;
-}
-.suspend-button:active {
-  background-color: #515ea1;
   color: #141216;
   transition-duration: 150ms;
 }
 
 .icon-label {
-  font-size: 45px;
+  font-size: 20px;
   font-weight: normal;
 }
