--- a/Configs/Eww/eww.scss
+++ b/Configs/Eww/eww.scss
@@ -1,3 +1,2 @@
 /* File that manages all of the style files for the widgets */
-
-@import "PowerMenu/powerMenu.scss"
+@import "Styles/powerMenu.scss"
