Edited Config Files and added Pictures. Changed Config Files and added Pictures.

--- a/Configs/Eww/eww.scss
+++ b/Configs/Eww/eww.scss
@@ -3,13 +3,6 @@
   background: transparent;
 }
 
-.pmenu-widget {
-}
-
-.pmenu-side-img {
-  background-image: url("/home/dev/Pictures/Wallpapers/Signalis Collage.png");
-}
-
 .pmenu-buttons .btn {
   background-color: rgba(7, 43, 28, 0.95);
   font-family: "monaspace krypton";
@@ -23,5 +16,5 @@
 }
 
 .lock-btn-img, .shutdown-btn-img, .restart-btn-img {
-   background-image: url("/home/dev/Pictures/Wallpapers/Signalis Collage.png");
+   background-image: url("JuniMoon.png");
 }
